test_src/compiler_errors/types/boolean/LessThanBoolError1.b
class LessThanBoolError1 {
    void test() {
        println(1 < false);
    }
}
